--- a/RegistroPersonasEmisora/index.html
+++ b/RegistroPersonasEmisora/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro de Personas de Emisora</title>
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body onload="mostrarPersonas()">
     <div class="cabecero" id="cabecero">
@@ -136,7 +136,7 @@
     <script
       src="https://kit.fontawesome.com/dc97c04e5e.js"
       crossorigin="anonymous"></script>
-    <script src="/js/persona.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/persona.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
